@@ -13,8 +13,10 @@
 //#define OPTION_CURSOR_INTEGRATION "cursor_integration"
 #define OPTION_CPU "cpu"
 #define OPTION_CPU_IDLE "cpu_idle"
+#define OPTION_DETERMINISTIC "deterministic"
 #define OPTION_DONGLE_TYPE "dongle_type"
 #define OPTION_FAST_MEMORY "fast_memory"
+#define OPTION_FLOPPY_DRIVE_0 "floppy_drive_0"
 #define OPTION_FLOPPY_DRIVE_VOLUME "floppy_drive_volume"
 #define OPTION_FLOPPY_DRIVE_VOLUME_EMPTY "floppy_drive_volume_empty"
 #define OPTION_FPU "fpu"
